<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient3">


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_above="@+id/adView"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_40sdp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_hero_1"
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:elevation="@dimen/_10sdp"
                app:civ_border_width="3dp"
                app:civ_border_color="@android:color/white"
               />

            <TextView
                android:id="@+id/name_hero_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/contact1"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/num_hero_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/contactnum1"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:textColor="@color/color_accept_decline"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:src="@drawable/whitecall"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/incoming_call"
                android:textColor="@color/color_accept_decline"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_35sdp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_125sdp"
                android:layout_marginRight="@dimen/_125sdp"
                android:orientation="vertical"
                android:gravity="center"
                >

                <RelativeLayout
                    android:id="@+id/call_refus"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:elevation="@dimen/_10sdp"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="visible"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/cercle_btn"
                        tools:ignore="ContentDescription" />


                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/whitecall"
                        android:backgroundTint="@android:color/holo_red_light"
                        android:rotation="135"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/decline_call"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/color_accept_decline"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <RelativeLayout
                    android:id="@+id/accept_call"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp"
                    android:elevation="@dimen/_10sdp"
                    tools:ignore="UnusedAttribute">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/cercle_btn"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/whitecall"
                        android:backgroundTint="#3FBE45"
                        tools:ignore="ContentDescription,UnusedAttribute" />

                </RelativeLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/accept_call"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/color_accept_decline"/>
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>



    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        tools:ignore="RtlHardcoded">
    </RelativeLayout>




</RelativeLayout>