<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SurfaceView
            android:id="@+id/surfaceVideo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#9b000000">

        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_above="@id/adView"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_40sdp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:src="@drawable/img1"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/contact1"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:textColor="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/contactnum1"
                android:textStyle="bold"
                android:textSize="@dimen/_15sdp"
                android:textColor="#dfdfdf"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_25sdp"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables,UselessParent">

            <ImageView
                android:layout_width="@dimen/_45sdp"
                android:layout_height="@dimen/_45sdp"
                android:src="@drawable/btn_video_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="Incoming Video Chating"
                android:textColor="#ededed"
                android:textStyle="bold"
                android:textSize="@dimen/_14sdp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/_35sdp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables,UselessParent">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_150sdp"
                android:layout_marginRight="@dimen/_150sdp"
                android:orientation="vertical"
                android:gravity="center"
                >

                <RelativeLayout
                    android:id="@+id/video_refus"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp">

                    <ImageView
                        android:id="@+id/denied_button"
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:background="@drawable/decline"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/denied_button2"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/whitecall"
                        android:rotation="135"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/decline_call"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/color_accept_decline_video"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">


                <RelativeLayout
                    android:id="@+id/video_accpt"
                    android:layout_width="@dimen/_65sdp"
                    android:layout_height="@dimen/_65sdp">

                    <ImageView
                        android:layout_width="@dimen/_60sdp"
                        android:layout_height="@dimen/_60sdp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="0dp"
                        android:background="@drawable/accepts"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/video_accpt2"
                        android:layout_width="@dimen/_30sdp"
                        android:layout_height="@dimen/_30sdp"
                        android:layout_centerInParent="true"
                        android:src="@drawable/whitecall"
                        tools:ignore="ContentDescription" />

                </RelativeLayout>




                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:text="@string/accept_call"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_12sdp"
                    android:textColor="@color/color_accept_decline_video"/>
            </LinearLayout>



        </LinearLayout>


    </LinearLayout>




    <RelativeLayout
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        tools:ignore="RtlHardcoded">
    </RelativeLayout>






</RelativeLayout>